--- a/awards.html
+++ b/awards.html
@@ -199,11 +199,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsENDBBdG5kX1g5MGM" target="_blank">
 												<h4 class="mt-15 mb-20">Mailer Designing Competition</h4>
 											</a>
-											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
-											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+											<p>1<sup style="font-size: smaller;">st</sup> Prize | World AIDS Day</p>
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsENDBBdG5kX1g5MGM" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp" target="_blank">
 												<i class="zmdi zmdi-mail-send"></i>
 											</a>
 										</div>
@@ -218,7 +218,7 @@
 												<h4 class="mt-15 mb-20">Pictorial Quiz Contest</h4>
 											</a>
 											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
-											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-puzzle-piece"></i>
 											</a>
 										</div>
@@ -233,7 +233,7 @@
 												<h4 class="mt-15 mb-20">IRC Week Crossword Contest</h4>
 											</a>
 											<p>1<sup style="font-size: smaller;">st</sup> Prize</p>
-											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+											<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-edit"></i>
 											</a>
 										</div>
@@ -253,7 +253,7 @@
           <h4 class="mt-15 mb-20">Word Search</h4>
         </a>
         <p>1<sup style="font-size: smaller;">st</sup> Prize</p>
-        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
           <i class="zmdi zmdi-search"></i>
         </a>
       </div>
@@ -268,7 +268,7 @@
           <h4 class="mt-15 mb-20">Calligraphy Competition</h4>
         </a>
         <p>1<sup style="font-size: smaller;">st</sup> Prize</p>
-        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
           <i class="zmdi zmdi-brush"></i>
         </a>
       </div>
@@ -283,7 +283,7 @@
           <h4 class="mt-15 mb-20">Dumb Charades</h4>
         </a>
         <p>1<sup style="font-size: smaller;">st</sup> Prize</p>
-        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-golden mdl-shadow--8dp">
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
           <i class="zmdi zmdi-volume-off"></i>
         </a>
       </div>
@@ -342,6 +342,164 @@
   </div>
 </div>
 <!--Row 3 ends-->
+<br>
+<br>
+<!--Row 4-->
+<div class="row">
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">The Institution of Electronics & Telecommunication Engineers</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Technical Paper Presentation</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize | Space Junk</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-collection-text	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Navbharat Times</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">City Level Photography Contest</h4>
+        </a>
+        <p>3<sup style="font-size: smaller;">rd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-bronze mdl-shadow--8dp">
+          <i class="zmdi zmdi-camera-alt	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Rameshwaram Institute of
+					<br>Technology and Management</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Technical Chart Presentation</h4>
+        </a>
+        <p>1<sup style="font-size: smaller;">st</sup> Prize | Solar Houses</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+          <i class="zmdi zmdi-blur-linear	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Row 4 ends-->
+<br>
+<br>
+<!--Row 5-->
+<div class="row">
+
+	<div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">The Institution of Electronics & Telecommunication Engineers</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Technical Paper Presentation</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize | AI & Neural Networks</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-collection-text	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+        <span class="blog-cat">Amar Ujala</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">City Level Drama Competition | Corruption</h4>
+        </a>
+        <p>3<sup style="font-size: smaller;">rd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-bronze mdl-shadow--8dp">
+          <i class="zmdi zmdi-movie	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+				<span class="blog-cat">Rameshwaram Institute of
+					<br>Technology and Management</span>
+					<a href="">
+          <h4 class="mt-15 mb-20">Poetry Competition</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-quote	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Row 5 ends-->
+<br>
+<br>
+<!--Row 6-->
+<div class="row">
+
+	<div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+				<span class="blog-cat">Rameshwaram Institute of
+					<br>Technology and Management</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Scrap Art</h4>
+        </a>
+        <p>1<sup style="font-size: smaller;">st</sup> Prize | Electric Flowers</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+          <i class="zmdi zmdi-flower-alt	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+				<span class="blog-cat">Sri Ramswaroop Memorial
+					<br>College Of Engineering & Management</span>
+        <a href="">
+          <h4 class="mt-15 mb-20">Dumb Charades</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-volume-off	"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+<!--  <div class="col-sm-4 mb-30">
+    <div class="mdl-card mdl-shadow--2dp pa-0">
+      <div class="mdl-card__supporting-text relative">
+				<span class="blog-cat">Rameshwaram Institute of
+					<br>Technology and Management</span>
+					<a href="">
+          <h4 class="mt-15 mb-20">Poetry Competition</h4>
+        </a>
+        <p>2<sup style="font-size: smaller;">nd</sup> Prize</p>
+        <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-silver mdl-shadow--8dp">
+          <i class="zmdi zmdi-quote	"></i>
+        </a>
+      </div>
+    </div>
+  </div> -->
+</div>
+<!--Row 6 ends-->
 
 							<div class="navigation-block mb-30">
 								<a href="achievements-list.html" class="inline-block pull-left prev"><i class="zmdi zmdi-arrow-left font-blue"></i></a>
