--- a/blog-list.html
+++ b/blog-list.html
@@ -192,7 +192,7 @@
 					<div class="container">
 						<!--Blog Sec-->
 						<section id="blog_sec" class="blog-sec mt-180 mt-sm-120">
-							<h2 class="mb-30 font-white">Certificates</h2>
+							<h2 class="mb-30 font-white">Certifications</h2>
 							<div class="row">
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
