--- a/achievements-list.html
+++ b/achievements-list.html
@@ -87,7 +87,7 @@
 							<span class="candidate-name block mb-10 text-center">Abdulah Saghir Ahmad</span>
 							<ul class="social-icons  mb-30">
 								<li>
-									<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/">
+									<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/" target="_blank">
 										<i id="tt11" class="zmdi zmdi-facebook"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt11">
 											facebook
@@ -95,7 +95,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056">
+									<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056" target="_blank">
 										<i id="tt13" class="zmdi zmdi-linkedin"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt13">
 											linkedin
@@ -103,7 +103,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="instagram-link" href="https://instagram.com/the.final.shot/">
+									<a class="instagram-link" href="https://instagram.com/the.final.shot/" target="_blank">
 										<i id="tt15" class="zmdi zmdi-instagram"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt15">
 											instagram
@@ -111,7 +111,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="twitter-link" href="http://theoriginalabz.deviantart.com/">
+									<a class="twitter-link" href="http://theoriginalabz.deviantart.com/" target="_blank">
 										<i id="tt12" class="zmdi zmdi-brush"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt12">
 											deviantArt
@@ -119,7 +119,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/">
+									<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/" target="_blank">
 										<i id="tt14" class="zmdi zmdi-behance"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt14">
 											behance
@@ -198,11 +198,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQUtfU2dtalZUaHc" target="_blank">
 												<h4 class="mt-15 mb-20">Graphic Designer</h4>
 											</a>
 											<p>Awarded in recognition of my work as a Graphic Designer</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQUtfU2dtalZUaHc" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp" target="_blank">
 												<i class="zmdi zmdi-case"></i>
 											</a>
 										</div>
@@ -212,11 +212,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsER3AzTHZNdUNQTHc" target="_blank">
 												<h4 class="mt-15 mb-20">Slide Master</h4>
 											</a>
 											<p>Awarded in appreciation of my skill and art of creating amazing slides and presentations</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsER3AzTHZNdUNQTHc" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp" target="_blank">
 												<i class="zmdi zmdi-case"></i>
 											</a>
 										</div>
@@ -226,11 +226,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsESFNMV2RxUi1IZGs" target="_blank">
 												<h4 class="mt-15 mb-20">Special Initiative</h4>
 											</a>
 											<p>Awarded in appreciation of my outstanding contribution to the organisation and for being an inspiring role model to my colleagues</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsESFNMV2RxUi1IZGs" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp" target="_blank">
 												<i class="zmdi zmdi-case"></i>
 											</a>
 										</div>
@@ -241,34 +241,37 @@
 <br>
 				<!-- Row 2 -->
 				<div class="row">
+
 					<div class="col-sm-4 mb-30">
 						<div class="mdl-card mdl-shadow--2dp pa-0">
 							<div class="mdl-card__supporting-text relative">
 								<span class="blog-cat">Tata Consultancy Services</span>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
-									<h4 class="mt-15 mb-20">ILP Kudos</h4>
-								</a>
-								<p>Awarded in appreciation of my performance in the Initial Learning Program (ILP)</p>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
-									<i class="zmdi zmdi-case"></i>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4 mb-30">
-						<div class="mdl-card mdl-shadow--2dp pa-0">
-							<div class="mdl-card__supporting-text relative">
-								<span class="blog-cat">Tata Consultancy Services</span>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view">
+								<a href="https://drive.google.com/open?id=0ByFSl5W-SUsENkdPUU96VGZGT2M" target="_blank">
 									<h4 class="mt-15 mb-20">Best Team</h4>
 								</a>
 								<p>Awarded in acknowledgment of showing up excellency towards "on time delivery" and "quality", and presenting flexibility to work above and beyond prescribed duties regularly, showcasing technical expertise, creating automated tools to ease the work and reduce manual efforts and project life cycle duration.</p>
-								<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+								<a href="https://drive.google.com/open?id=0ByFSl5W-SUsENkdPUU96VGZGT2M" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp" target="_blank">
 									<i class="zmdi zmdi-case"></i>
 								</a>
 							</div>
 						</div>
 					</div>
+
+					<div class="col-sm-4 mb-30">
+						<div class="mdl-card mdl-shadow--2dp pa-0">
+							<div class="mdl-card__supporting-text relative">
+								<span class="blog-cat">Tata Consultancy Services</span>
+								<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEcXZkU0duaXI1Njg" target="_blank">
+									<h4 class="mt-15 mb-20">ILP Kudos</h4>
+								</a>
+								<p>Awarded in appreciation of my performance in the Initial Learning Program (ILP)</p>
+								<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEcXZkU0duaXI1Njg" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp" target="_blank">
+									<i class="zmdi zmdi-case"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+
 					<div class="col-sm-4 mb-30">
 						<div class="mdl-card mdl-shadow--2dp pa-0">
 							<div class="mdl-card__supporting-text relative">
@@ -301,7 +304,7 @@
 							<!-- <p class="mt-10">Abdullah 2017. All rights reserved.</p> -->
 								<ul class="social-icons mt-10">
 									<li>
-										<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/">
+										<a class="facebook-link" href="https://www.facebook.com/abdullahsaghirahmad/" target="_blank">
 											<i id="tt6" class="zmdi zmdi-facebook"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt6">
 												facebook
@@ -309,7 +312,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/">
+										<a class="linkedin-link" href="https://www.linkedin.com/in/abdullah-saghir-ahmad-13546056/" target="_blank">
 											<i id="tt8" class="zmdi zmdi-linkedin"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt8">
 												linkedin
@@ -317,7 +320,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="instagram-link" href="https://instagram.com/the.final.shot/">
+										<a class="instagram-link" href="https://instagram.com/the.final.shot/" target="_blank">
 											<i id="tt9" class="zmdi zmdi-instagram"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt9">
 												instagram
@@ -325,7 +328,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="twitter-link" href="http://theoriginalabz.deviantart.com/">
+										<a class="twitter-link" href="http://theoriginalabz.deviantart.com/" target="_blank">
 											<i id="tt7" class="zmdi zmdi-brush"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt7">
 												deviantArt
@@ -333,7 +336,7 @@
 										</a>
 									</li>
 									<li>
-										<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/">
+										<a class="dribbble-link" href="https://www.behance.net/abdullahsa624a/" target="_blank">
 											<i id="tt10" class="zmdi zmdi-behance"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt10">
 												behance
