--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
 									<h2 class="mb-30">technical skills</h2>
 									<div class="mdl-card mdl-shadow--2dp">
 										<div class="mb-30">
-											<span class="progress-cat">Adobe Lightroom</span>
+											<span class="progress-cat">HTML & CSS</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap green-bar">
-														<span data-width="90"></span>
+													<div class="bar-wrap ruby-bar">
+														<span data-width="80"></span>
 													</div>
 												</div>
 											</div>
@@ -313,17 +313,17 @@
 											<span class="progress-cat">Java</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap blue-bar">
+													<div class="bar-wrap black-bar">
 														<span data-width="75"></span>
 													</div>
 												</div>
 											</div>
 										</div>
 										<div class="mb-30">
-											<span class="progress-cat">HTML & CSS</span>
+											<span class="progress-cat">Adobe Lightroom</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap yellow-bar">
+													<div class="bar-wrap cyangrey-bar">
 														<span data-width="80"></span>
 													</div>
 												</div>
@@ -333,7 +333,7 @@
 											<span class="progress-cat">Adobe After Effects</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap blue-bar">
+													<div class="bar-wrap beag-bar">
 														<span data-width="70"></span>
 													</div>
 												</div>
@@ -343,7 +343,7 @@
 											<span class="progress-cat">MS Powerpoint</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap green-bar">
+													<div class="bar-wrap darkorange-bar">
 														<span data-width="97"></span>
 													</div>
 												</div>
@@ -353,7 +353,7 @@
 											<span class="progress-cat">MS Excel</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap yellow-bar">
+													<div class="bar-wrap darkblue-bar">
 														<span data-width="85"></span>
 													</div>
 												</div>
@@ -364,36 +364,67 @@
 								<div class="col-sm-6 mb-30">
 									<h2 class="mb-30">soft skills</h2>
 										<div class="mdl-card mdl-shadow--2dp">
+											<div class="mb-30">
+												<span class="progress-cat">Leading Teams</span>
+												<div class="progress-bar-graph">
+													<div class="progress-bar-wrap">
+														<div class="bar-wrap s1-bar">
+															<span data-width="97"></span>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="mb-30">
+												<span class="progress-cat">Organizing</span>
+												<div class="progress-bar-graph">
+													<div class="progress-bar-wrap">
+														<div class="bar-wrap s2-bar">
+															<span data-width="95"></span>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="mb-30">
+												<span class="progress-cat">Time Budgeting</span>
+												<div class="progress-bar-graph">
+													<div class="progress-bar-wrap">
+														<div class="bar-wrap s3-bar">
+															<span data-width="95"></span>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="mb-30">
+												<span class="progress-cat">Presentation</span>
+												<div class="progress-bar-graph">
+													<div class="progress-bar-wrap">
+														<div class="bar-wrap s4-bar">
+															<span data-width="98"></span>
+														</div>
+													</div>
+												</div>
+											</div>
 										<div class="mb-30">
 											<span class="progress-cat">Communication</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap blue-bar">
-														<span data-width="98"></span>
+													<div class="bar-wrap s5-bar">
+														<span data-width="96"></span>
 													</div>
 												</div>
 											</div>
 										</div>
 										<div class="mb-30">
-											<span class="progress-cat">Language</span>
+											<span class="progress-cat">Team Work</span>
 											<div class="progress-bar-graph">
 												<div class="progress-bar-wrap">
-													<div class="bar-wrap green-bar">
-														<span data-width="95"></span>
+													<div class="bar-wrap s6-bar">
+														<span data-width="94"></span>
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="mb-30">
-											<span class="progress-cat">Presentation</span>
-											<div class="progress-bar-graph">
-												<div class="progress-bar-wrap">
-													<div class="bar-wrap yellow-bar">
-														<span data-width="98"></span>
-													</div>
-												</div>
-											</div>
-										</div>
+
 									</div>
 								</div>
 							</div>
@@ -558,7 +589,7 @@
 												<span class="institution">Tata Consultancy Services</span>
 											</div>
 											<div class="timeline-body">
-												<p class="mt-25">My work is characterized by the division of tasks into short phases of work and frequent reassessment and adaptation of plans. I have the task of identifying business needs and determining solutions to business problems. Solutions often include a software-systems development component, process improvement and strategic planning.</p>
+												<p class="mt-25">My work, as a BA, was characterized by the division of tasks into short phases of work and frequent reassessment and adaptation of plans. My primary responsibility was to identify business needs and determine solutions to business problems. Solutions often included a software-systems component development, process improvement and strategic planning.</p>
 											</div>
 										</div>
 									</li>
@@ -574,7 +605,7 @@
 												<span class="institution">Tata Consultancy Services</span>
 											</div>
 											<div class="timeline-body">
-												<p class="mt-25">I was a Senior Developer for Optumera™, a shopper-centric merchandise optimization suite which helps to cluster stores, right space categories in the stores and create compelling assortment. I was involved in all the stages (Implementation, Testing, Go Live and Support) of the project and had hands on experience with UATs and critical Go Live situations.</p>
+												<p class="mt-25">I worked as a Developer for Optumera™, a shopper-centric merchandise optimization suite which helps to cluster stores, right space categories in the stores and create compelling assortment. I was involved in all the stages (Implementation, Testing, Go Live and Support) of the project and had hands on experience with UATs and critical Go Live situations.</p>
 											</div>
 										</div>
 									</li>
@@ -723,11 +754,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQUtfU2dtalZUaHc" target="_blank">
 												<h4 class="mt-15 mb-20">Graphic Designer</h4>
 											</a>
 											<p>Awarded in recognition of my work as a Graphic Designer</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsEQUtfU2dtalZUaHc" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-star-circle"></i>
 											</a>
 										</div>
@@ -737,11 +768,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsER3AzTHZNdUNQTHc" target="_blank">
 												<h4 class="mt-15 mb-20">Slide Master</h4>
 											</a>
 											<p>Awarded in appreciation of my skill and art of creating amazing slides and presentations</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsER3AzTHZNdUNQTHc" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-star-circle"></i>
 											</a>
 										</div>
@@ -751,11 +782,11 @@
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Tata Consultancy Services</span>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsESFNMV2RxUi1IZGs" target="_blank">
 												<h4 class="mt-15 mb-20">Special Initiative</h4>
 											</a>
 											<p>Awarded in appreciation of my outstanding contribution to the organisation and for being an inspiring role model to my colleagues</p>
-											<a href="https://drive.google.com/file/d/0ByFSl5W-SUsEOW9TOUV1bVZ0WW8/view" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
+											<a href="https://drive.google.com/open?id=0ByFSl5W-SUsESFNMV2RxUi1IZGs" target="_blank" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-deepyellow mdl-shadow--8dp">
 												<i class="zmdi zmdi-star-circle"></i>
 											</a>
 										</div>
@@ -1055,8 +1086,7 @@ You will suit any job that you land or rather any job that lands on you will sui
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/froogaloop2.min.js"></script>
 		<script src="js/jquery.slimscroll.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxXt2P7-U38bK0xEFIT-ebZJ1ngK8wjww"></script>
 		<script src="js/init.js"></script>
-
+		<!-- <script src="js/my.js"></script> -->
 	</body>
 </html>
