--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 	<!-- Pop-up code begins -->
 	<!-- Load local jQuery -->
-	<script src="Remodal/libs/jquery-loader.js"></script>
+	<script src="remod/libs/jquery-loader.js"></script>
 
 	<!-- Load local QUnit -->
-	<link rel="stylesheet" href="Remodal/libs/qunit/qunit/qunit.css" media="screen">
-	<script src="Remodal/libs/qunit/qunit/qunit.js"></script>
+	<link rel="stylesheet" href="remod/libs/qunit/qunit/qunit.css" media="screen">
+	<script src="remod/libs/qunit/qunit/qunit.js"></script>
 
 	<!-- Load local lib and tests -->
-	<link rel="stylesheet" href="Remodal/src/remodal.css">
-	<link rel="stylesheet" href="Remodal/src/remodal-default-theme.css">
-	<script src="Remodal/src/remodal.js"></script>
-	<script src="Remodal/remodal_test.js"></script>
+	<link rel="stylesheet" href="remod/src/remodal.css">
+	<link rel="stylesheet" href="remod/src/remodal-default-theme.css">
+	<script src="remod/src/remodal.js"></script>
+	<script src="remod/remodal_test.js"></script>
 	<style>
 	.remodal-overlay.without-animation.remodal-is-opening,
 	.remodal-overlay.without-animation.remodal-is-closing,
