--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 	<script src="remod/libs/jquery-loader.js"></script>
 
 	<!-- Load local QUnit -->
-	<link rel="stylesheet" href="remod/libs/qunit/qunit/qunit.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="remod/libs/qunit/qunit/qunit.css" media="screen">
 	<script src="remod/libs/qunit/qunit/qunit.js"></script>
 
 	<!-- Load local lib and tests -->
-	<link rel="stylesheet" href="remod/src/remodal.css">
-	<link rel="stylesheet" href="remod/src/remodal-default-theme.css">
+	<link rel="stylesheet" type="text/css" href="remod/src/remodal.css">
+	<link rel="stylesheet" type="text/css" href="remod/src/remodal-default-theme.css">
 	<script src="remod/src/remodal.js"></script>
 	<script src="remod/remodal_test.js"></script>
 	<style>
