--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	<!-- Pop-up code begins -->
 	<!-- Load local jQuery -->
-	<script src="remod/libs/jquery-loader.js"></script>
-
+	<script src="remod/libs/jquery-loader.js"></script>=
+	
 	<!-- Load local QUnit -->
 	<link rel="stylesheet" type="text/css" href="remod/libs/qunit/qunit/qunit.css" media="screen">
 	<script src="remod/libs/qunit/qunit/qunit.js"></script>
