--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- Pop-up code begins -->
 	<!-- Load local jQuery -->
-	<script src="remod/libs/jquery-load.js"></script>
+	<!-- <script src="remod/libs/jquery-load.js"></script> -->
 
 	<!-- Load local QUnit -->
 	<link rel="stylesheet" type="text/css" href="remod/libs/qunit/qunit/qunit.css" media="screen">
