--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- Pop-up code begins -->
 	<!-- Load local jQuery -->
-	<!-- <script src="remod/libs/jquery-load.js"></script> -->
+	<script src="remod/libs/jquery-load.js"></script>=
 
 	<!-- Load local QUnit -->
 	<link rel="stylesheet" type="text/css" href="remod/libs/qunit/qunit/qunit.css" media="screen">
@@ -1330,7 +1330,6 @@ customer’s business.</p>
 <script src="js/froogaloop2.min.js"></script>
 <script src="js/jquery.slimscroll.js"></script>
 <script src="js/init.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- <script src="js/my.js"></script> -->
 </body>
 </html>
