--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<!-- <script src="remod/libs/jquery-load.js"></script> -->
 
 	<!-- Load local QUnit -->
-	<link rel="stylesheet" type="text/css" href="remod/libs/qunit/qunit/qunit.css" media="screen">
-	<script src="remod/libs/qunit/qunit/qunit.js"></script>
+	<!-- <link rel="stylesheet" type="text/css" href="remod/libs/qunit/qunit/qunit.css" media="screen">
+	<script src="remod/libs/qunit/qunit/qunit.js"></script> -->
 
 	<!-- Load local lib and tests -->
 	<link rel="stylesheet" type="text/css" href="remod/src/remodal.css">
