--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<!-- Pop-up code begins -->
 	<!-- Load local jQuery -->
 	<!-- <script src="remod/libs/jquery-load.js"></script> -->
