--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<!-- Pop-up code begins -->
 	<!-- Load local jQuery -->
 	<!-- <script src="remod/libs/jquery-load.js"></script> -->
@@ -878,7 +878,7 @@ Your browser does not support HTML5 video.
 				<div class="timeline-panel mdl-card mdl-shadow--2dp  pt-30 pb-30 ">
 					<div class="timeline-heading">
 						<h4 class="mb-10">Vibhor</h4>
-						<span class="duration mb-5">Mar 2014</span>
+						<span class="duration mb-5">Mar 2014, 2013, 2012</span>
 						<span class="institution">Rameshwaram Institute of Technology and Management</span>
 					</div>
 				</div>
@@ -1109,8 +1109,8 @@ Your browser does not support HTML5 video.
 					</p>
 					<br>
 					<ul class="blog-detail-list mt-20">
-						<li>My day to day tasks included:</li><br>
-						<li>• Written and verbal communication with TCS and NA teams</li>
+						<li>My Responsibilities:</li><br>
+						<li>• Requirement Gathering along-with analysis and communication with TCS and NA teams</li>
 						<li>• Understanding of systems engineering concepts</li>
 						<li>• Modeling techniques and methods</li>
 						<li>• Time budgeting</li>
@@ -1189,8 +1189,6 @@ Your browser does not support HTML5 video.
 				<div class="mdl-card__supporting-text relative">
 					<div class="pt-10 pb-10 pl-30 pr-30">
 						<blockquote class="mt-40">“The development of expertise is a long process, during which theoretical, practical and metacognitive elements of expert knowledge are integrated into a coherent whole.”</blockquote>
-						<!-- <span class="ref-name block mb-5 mt-20">john doe</span>
-						<span class="ref-desgn block">Lead Designer in Droffox</span> -->
 					</div>
 					<p class="mt-50 mb-20 lead"> With the aim of developing my skill-sets I did my Summer Internship from Doordarshan Kendra, Lucknow. The curriculum of the internship comprised of Four modules: TV Studio, Editing, Terrestrial Platforms and Satellite Communication respectively. The initial lecture introduced us to the Lucknow Centre of Doordarshan.<br><br>
 						The Module-1 comprised of base-band signals, TV camera, TV audio, Vision Mixing, TV Lighting and TV recordings. We learned about the various signals involved in TV broadcasting and their frequency ranges, the TV camera and the parameters affecting the recording system. The lectures were followed by visits to the DDK Studio and the OB Van.<br><br>
@@ -1212,40 +1210,32 @@ Your browser does not support HTML5 video.
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
-				<!-- <div class="mdl-card__title pa-0">
-				<div class="main-blogpost-img blog-img blog-1"></div>
-			</div> -->
-			<div class="mdl-card__supporting-text relative">
-				<!-- <div class="text-center">
-				<span class="blog-cat mt-20">photography</span>
-				<h2 class="mt-10">This is an Image blog post</h2>
-				<span class="blog-post-date inline-block mt-10">21.1.17</span>
-				<div class="blog-post-info mt-10">
-				<a href="" class="pr-10"><i class="zmdi zmdi-account pr-5"></i>by admin</a>
-				<a href=""><i class="zmdi zmdi-comments pr-10"></i>51</a>
+				<div class="mdl-card__supporting-text relative">
+					<p class="mt-50 mb-20 lead">
+						In the past, IT business was about selling speeds and feeds to technical buyers, but today it's about collaboratively designing solutions, systems engagement software and systems of insights for digitally empowered leaders and that's a big change. We, TCSers are known for Leading change.
+						With this attribute of change, innovation and team work housed at its core, I, along-with 6 of my colleagues designer TCS-Ceridian Innovation Week.
+						<br><br>
+						The week, that encouraged us to think out of the box, to work as a team and to do something tangible for our customer’s business by focusing on Human Capital Management re-imagination. It had events like Panoply i.e. Technical Presentation and Let’s Innovate i.e. Tool and Utility Creation, which helped us in gauging the impact of digital technologies on our business and helped the associates to showcase their thinking abilities by questioning conventional wisdom. And the events like Think Quick and FunForce, that showcased the importance of awareness, communication, working together as a team and group dynamics.
+						<br><br>
+						<ul class="blog-detail-list mt-20">
+							<li>My Responsibilities:</li><br>
+							<li>• Organizing and co-ordinating the event</li>
+							<li>• Designing digital media for the event</li>
+							<li>• Hosting the closing ceremony</li>
+							<li>• Resource Procurement</li>
+							<li>• Budgeting</li>
+						</ul>
+					</p>
+					<br><br>
+					<img src="img/iw1.JPG"/>
+					<br><br>
+					<img src="img/iw2.JPG"/>
+					<br><br>
+					<img src="img/iw3.JPG"/>
+				</div>
 			</div>
-		</div> -->
-		<p class="mt-50 mb-20 lead">I, along-with 6 of my colleagues, conducted the TCS-Ceridian Innovation Week
-aimed at collaboratively engaging different teams across the Ceridian account and
-doing something tangible for our
-customer’s business.</p>
-		<div class="pt-10 pb-10 pl-30 pr-30">
-			<blockquote class="mt-40">"Quote data"</blockquote>
-			<!-- <span class="ref-name block mb-5 mt-20">john doe</span>
-			<span class="ref-desgn block">Lead Designer in Droffox</span> -->
 		</div>
-		<!-- <h5 class="mt-50">Important Points</h5>
-		<ul class="blog-detail-list mt-20">
-		<li>All that is gold does not glitter.</li>
-		<li>Not all those who wander are lost.</li>
-		<li>The old that is strong does not wither.</li>
-		<li>Deep roots are not reached by the frost.</li>
-	</ul>
-	<p class="mt-30">Twenty years from now you will be more disappointed by the things that you didn't do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.</p> -->
-</div>
-</div>
-</div>
-</div>
+	</div>
 </div>
 
 <div class="remodal" data-remodal-id="modal_technofun">
@@ -1254,33 +1244,33 @@ customer’s business.</p>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
-				<!-- <div class="mdl-card__title pa-0">
-				<div class="main-blogpost-img blog-img blog-1"></div>
-			</div> -->
 			<div class="mdl-card__supporting-text relative">
-				<!-- <div class="text-center">
-				<span class="blog-cat mt-20">photography</span>
-				<h2 class="mt-10">This is an Image blog post</h2>
-				<span class="blog-post-date inline-block mt-10">21.1.17</span>
-				<div class="blog-post-info mt-10">
-				<a href="" class="pr-10"><i class="zmdi zmdi-account pr-5"></i>by admin</a>
-				<a href=""><i class="zmdi zmdi-comments pr-10"></i>51</a>
-			</div>
-		</div> -->
-		<p class="mt-50 mb-20 lead">sdfsd</p>
 		<div class="pt-10 pb-10 pl-30 pr-30">
-			<blockquote class="mt-40">"Quote data"</blockquote>
-			<!-- <span class="ref-name block mb-5 mt-20">john doe</span>
-			<span class="ref-desgn block">Lead Designer in Droffox</span> -->
+			<blockquote class="mt-40">“It’s not the events that shape us, but the meaning we attach to those events.”</blockquote>
 		</div>
-		<!-- <h5 class="mt-50">Important Points</h5>
-		<ul class="blog-detail-list mt-20">
-		<li>All that is gold does not glitter.</li>
-		<li>Not all those who wander are lost.</li>
-		<li>The old that is strong does not wither.</li>
-		<li>Deep roots are not reached by the frost.</li>
-	</ul>
-	<p class="mt-30">Twenty years from now you will be more disappointed by the things that you didn't do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.</p> -->
+		<p class="mt-50 mb-20 lead">
+			I designed 'TechnoFun' to create opportunities that create interactions among the team members, a source to fill moments of fun in our day-to-day work along-with technical innovation and it was bang on!
+			<br><br>
+			Talent won games and team work won events.
+			<br><br>
+			<ul class="blog-detail-list mt-20">
+				<li>My Responsibilities:</li><br>
+				<li>• Organizing and co-ordinating the event</li>
+				<li>• Designing digital media for the event</li>
+				<li>• Resource Procurement</li>
+				<li>• Budgeting</li>
+			</ul>
+		</p>
+		<br><br>
+		<img src="img/tf1.JPG"/>
+		<br><br>
+		<img src="img/tf2.JPG"/>
+		<br><br>
+		<img src="img/tf3.JPG"/>
+		<br><br>
+		<img src="img/tf4.JPG"/>
+		<br><br>
+		<img src="img/tf5.JPG"/>
 </div>
 </div>
 </div>
@@ -1310,7 +1300,26 @@ customer’s business.</p>
 
 <div class="remodal" data-remodal-id="modal_vibhor">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	Organized Data 4
+	<img src="img/ritm.png"/>
+	<div class="row">
+		<div class="col-sm-12 mb-30">
+			<div class="mdl-card mdl-shadow--2dp pa-0">
+				<div class="mdl-card__supporting-text relative">
+					<p class="mt-50 mb-20 lead">
+						The Annual Fest of my College
+						<br><br>
+						<ul class="blog-detail-list mt-20">
+							<li>My Responsibilities:</li><br>
+							<li>• Organizing and co-ordinating the Cultural Events</li>
+							<li>• Stage Management</li>
+							<li>• Poster Designing</li>
+							<li>• Budgeting</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- Pop-up data ends -->
 
