--- a/index.html
+++ b/index.html
@@ -1227,11 +1227,11 @@ Your browser does not support HTML5 video.
 						</ul>
 					</p>
 					<br><br>
-					<img src="img/iw1.JPG"/>
+					<img src="img/iw1.jpg"/>
 					<br><br>
-					<img src="img/iw2.JPG"/>
+					<img src="img/iw2.jpg"/>
 					<br><br>
-					<img src="img/iw3.JPG"/>
+					<img src="img/iw3.jpeg"/>
 				</div>
 			</div>
 		</div>
