--- a/index.html
+++ b/index.html
@@ -1227,11 +1227,11 @@ Your browser does not support HTML5 video.
 						</ul>
 					</p>
 					<br><br>
-					<img src="img/iw1.jpg"/>
+					<img src="img/iw1.png"/>
 					<br><br>
-					<img src="img/iw2.jpg"/>
+					<img src="img/iw2.png"/>
 					<br><br>
-					<img src="img/iw3.jpeg"/>
+					<img src="img/iw3.png"/>
 				</div>
 			</div>
 		</div>
@@ -1262,15 +1262,15 @@ Your browser does not support HTML5 video.
 			</ul>
 		</p>
 		<br><br>
-		<img src="img/tf1.JPG"/>
+		<img src="img/tf1.png"/>
 		<br><br>
-		<img src="img/tf2.JPG"/>
+		<img src="img/tf2.png"/>
 		<br><br>
-		<img src="img/tf3.JPG"/>
+		<img src="img/tf3.png"/>
 		<br><br>
-		<img src="img/tf4.JPG"/>
+		<img src="img/tf4.png"/>
 		<br><br>
-		<img src="img/tf5.JPG"/>
+		<img src="img/tf5.png"/>
 </div>
 </div>
 </div>
@@ -1279,7 +1279,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_familyday">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/maitree.JPG"/>
+	<img src="img/maitree.png"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
