--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_inovation">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/blog26.JPG"/>
+	<img src="img/iw.png"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
