--- a/index.html
+++ b/index.html
@@ -918,11 +918,11 @@ Your browser does not support HTML5 video.
 				</div>
 				<div class="mdl-card__supporting-text relative">
 					<!-- <span class="blog-cat">Designs</span> -->
-					<a href="">
+					<a href="http://theoriginalabz.deviantart.com/gallery/62974668/Designs" target="_blank">
 						<h4 class="mt-15 mb-20">Designs</h4>
 					</a>
 					<p>My design gallery</p>
-					<a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+					<a href="http://theoriginalabz.deviantart.com/gallery/62974668/Designs" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp" target="_blank">
 						<i class="zmdi zmdi-brush"></i>
 					</a>
 				</div>
