--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 							<div class="col-md-7 col-xs-12">
 								<div class="info-wrap">
 									<h1>Abdullah Saghir Ahmad</h1>
-									<h5 class="mt-20 font-grey">Engineer | Photographer | Designer</h5>
+									<h5 class="mt-20 font-grey">Business Analyst &bull; Photographer &bull; Designer</h5>
 									<div class="mt-30">
 										<a id="download_cv" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  bg-green font-white mr-10" href="#">download cv</a>
 										<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect bg-blue font-white" href="mailto:abdullahsaghirahmad@gmail.com">contact</a>
