--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 			<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
 			data-mdl-for="demo-menu-lower-right">
-			<li class="mdl-menu__item"><a href="#"><i class="zmdi zmdi-download font-red pr-10"></i>Download CV</a></li>
+			<li class="mdl-menu__item"><a href="Resume - Abdullah Saghir Ahmad.pdf" download><i class="zmdi zmdi-download font-red pr-10"></i>Download CV</a></li>
 			<li class="mdl-menu__item"><a href="mailto:abdullahsaghirahmad@gmail.com"><i class="zmdi zmdi-email-open font-green pr-10"></i>Contact Me</a></li>
 			<li class="mdl-menu__item"><a href="callto:12345678910"><i class="zmdi zmdi-phone  font-blue  pr-10"></i>+91-9455259090</a></li>
 		</ul>
@@ -274,7 +274,7 @@
 									<h1>Abdullah Saghir Ahmad</h1>
 									<h5 class="mt-20 font-grey">Business Analyst &bull; Photographer &bull; Designer</h5>
 									<div class="mt-30">
-										<a id="download_cv" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  bg-green font-white mr-10" href="#">download cv</a>
+										<a id="download_cv" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  bg-green font-white mr-10" href="Resume - Abdullah Saghir Ahmad.pdf" download>download cv</a>
 										<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect bg-blue font-white" href="mailto:abdullahsaghirahmad@gmail.com">contact</a>
 									</div>
 								</div>
