--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 			<h2 class="mb-30">technical skills</h2>
 			<div class="mdl-card mdl-shadow--2dp">
 				<div class="mb-30">
-					<span class="progress-cat">HTML & CSS</span>
+					<span class="progress-cat">Web Technologies (HTML, CSS, JS, jQuery)</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
 							<div class="bar-wrap ruby-bar">
@@ -335,47 +335,17 @@
 					</div>
 				</div>
 				<div class="mb-30">
-					<span class="progress-cat">Java</span>
-					<div class="progress-bar-graph">
-						<div class="progress-bar-wrap">
-							<div class="bar-wrap black-bar">
-								<span data-width="75"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="mb-30">
-					<span class="progress-cat">Adobe Lightroom</span>
+					<span class="progress-cat">Adobe Lightroom and After Effects</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
 							<div class="bar-wrap cyangrey-bar">
-								<span data-width="80"></span>
+								<span data-width="77"></span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="mb-30">
-					<span class="progress-cat">Adobe After Effects</span>
-					<div class="progress-bar-graph">
-						<div class="progress-bar-wrap">
-							<div class="bar-wrap beag-bar">
-								<span data-width="70"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="mb-30">
-					<span class="progress-cat">MS Powerpoint</span>
-					<div class="progress-bar-graph">
-						<div class="progress-bar-wrap">
-							<div class="bar-wrap darkorange-bar">
-								<span data-width="97"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="mb-30">
-					<span class="progress-cat">MS Excel</span>
+					<span class="progress-cat">MS Powerpoint, MS Excel and MS Word</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
 							<div class="bar-wrap darkblue-bar">
@@ -390,27 +360,17 @@
 			<h2 class="mb-30">soft skills</h2>
 			<div class="mdl-card mdl-shadow--2dp">
 				<div class="mb-30">
-					<span class="progress-cat">Leadership</span>
+					<span class="progress-cat">Leadership and Team Work</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
-							<div class="bar-wrap s1-bar">
+							<div class="bar-wrap s2-bar">
 								<span data-width="97"></span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="mb-30">
-					<span class="progress-cat">Organizing</span>
-					<div class="progress-bar-graph">
-						<div class="progress-bar-wrap">
-							<div class="bar-wrap s2-bar">
-								<span data-width="95"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="mb-30">
-					<span class="progress-cat">Time Budgeting</span>
+					<span class="progress-cat">Organizing and Time Budgeting</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
 							<div class="bar-wrap s3-bar">
@@ -420,36 +380,15 @@
 					</div>
 				</div>
 				<div class="mb-30">
-					<span class="progress-cat">Presentation</span>
+					<span class="progress-cat">Presentation and Communication</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
-							<div class="bar-wrap s4-bar">
+							<div class="bar-wrap s1-bar">
 								<span data-width="98"></span>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="mb-30">
-					<span class="progress-cat">Communication</span>
-					<div class="progress-bar-graph">
-						<div class="progress-bar-wrap">
-							<div class="bar-wrap s5-bar">
-								<span data-width="96"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="mb-30">
-					<span class="progress-cat">Team Work</span>
-					<div class="progress-bar-graph">
-						<div class="progress-bar-wrap">
-							<div class="bar-wrap s6-bar">
-								<span data-width="94"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-
 			</div>
 		</div>
 	</div>
