--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 					<span class="progress-cat">Web Technologies (HTML, CSS, JS, jQuery)</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
-							<div class="bar-wrap ruby-bar">
+							<div class="bar-wrap t1-bar">
 								<span data-width="80"></span>
 							</div>
 						</div>
@@ -338,7 +338,7 @@
 					<span class="progress-cat">Adobe Lightroom and After Effects</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
-							<div class="bar-wrap cyangrey-bar">
+							<div class="bar-wrap t2-bar">
 								<span data-width="77"></span>
 							</div>
 						</div>
@@ -348,7 +348,7 @@
 					<span class="progress-cat">MS Powerpoint, MS Excel and MS Word</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
-							<div class="bar-wrap darkblue-bar">
+							<div class="bar-wrap t3-bar">
 								<span data-width="85"></span>
 							</div>
 						</div>
@@ -373,7 +373,7 @@
 					<span class="progress-cat">Organizing and Time Budgeting</span>
 					<div class="progress-bar-graph">
 						<div class="progress-bar-wrap">
-							<div class="bar-wrap s3-bar">
+							<div class="bar-wrap yellow-bar">
 								<span data-width="95"></span>
 							</div>
 						</div>
@@ -1039,7 +1039,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_ba">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/tcs.png"/>
+	<img src="img/tcs.png" class="modalImages"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
@@ -1076,7 +1076,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_dev">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/tcs.png"/>
+	<img src="img/tcs.png" class="modalImages"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
@@ -1121,7 +1121,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_ddk">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/ddk.png"/>
+	<img src="img/ddk.png" class="modalImages"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
@@ -1145,7 +1145,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_inovation">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/iw.png"/>
+	<img src="img/iw.png" class="modalImages"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
@@ -1166,11 +1166,11 @@ Your browser does not support HTML5 video.
 						</ul>
 					</p>
 					<br><br>
-					<img src="img/iw1.png"/>
+					<img src="img/iw1.png" class="modalImages"/>
 					<br><br>
-					<img src="img/iw2.png"/>
+					<img src="img/iw2.png" class="modalImages"/>
 					<br><br>
-					<img src="img/iw3.png"/>
+					<img src="img/iw3.png" class="modalImages"/>
 				</div>
 			</div>
 		</div>
@@ -1179,7 +1179,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_technofun">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/technofun.png"/>
+	<img src="img/technofun.png" class="modalImages"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
@@ -1201,15 +1201,15 @@ Your browser does not support HTML5 video.
 			</ul>
 		</p>
 		<br><br>
-		<img src="img/tf1.png"/>
+		<img src="img/tf1.png" class="modalImages"/>
 		<br><br>
-		<img src="img/tf2.png"/>
+		<img src="img/tf2.png" class="modalImages"/>
 		<br><br>
-		<img src="img/tf3.png"/>
+		<img src="img/tf3.png" class="modalImages"/>
 		<br><br>
-		<img src="img/tf4.png"/>
+		<img src="img/tf4.png" class="modalImages"/>
 		<br><br>
-		<img src="img/tf5.png"/>
+		<img src="img/tf5.png" class="modalImages"/>
 </div>
 </div>
 </div>
@@ -1218,7 +1218,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_familyday">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/maitree.png"/>
+	<img src="img/maitree.png" class="modalImages"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
@@ -1239,7 +1239,7 @@ Your browser does not support HTML5 video.
 
 <div class="remodal" data-remodal-id="modal_vibhor">
 	<a data-remodal-action="close" class="remodal-close"></a>
-	<img src="img/ritm.png"/>
+	<img src="img/ritm.png" class="modalImages"/>
 	<div class="row">
 		<div class="col-sm-12 mb-30">
 			<div class="mdl-card mdl-shadow--2dp pa-0">
